--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h3 class="pixel-slider-output"></h3>
                 <input type="range" value="4" min="1" max="64">
             </div>
-            <div class="sketching-board grid-lines-active">
+            <div class="sketching-board grid-lines-active disabled-pointer-events">
             </div>
         </div>
     </div>
@@ -49,6 +49,7 @@
     const getSliderOutput = () => document.querySelector(".pixel-slider-output");
 
     const generateRandomColor = () => "#" + ((1<<24)*Math.random() | 0).toString(16);
+    const rgba2hex = (rgba) => `#${rgba.match(/^rgba?\((\d+),\s*(\d+),\s*(\d+)(?:,\s*(\d+\.{0,1}\d*))?\)$/).slice(1).map((n, i) => (i === 3 ? Math.round(parseFloat(n) * 255) : parseFloat(n)).toString(16).padStart(2, '0').replace('NaN', '')).join('')}`
 
     const drawSketchingBoard = (e) => {
         const sketchingBoard = getSketchingBoard();
@@ -62,6 +63,7 @@
         for(let i = 0; i < boardRows; i++) {
             const boardRow = document.createElement("div");
             boardRow.classList.add("board-row");
+            boardRow.classList.add("disabled-pointer-events");
             for(let j = 0; j < boardRows; j++) {
                 const pixel = document.createElement("div");
                 pixel.classList.add("board-pixel");
@@ -89,28 +91,11 @@
         getSketchingBoard().classList.toggle("grid-lines-active");
     }
 
-    function shadeColor(color, percent) {
-
-        rgb = color.match(/^rgba?\((\d+),\s*(\d+),\s*(\d+)(,\s*\d+\.*\d+)?\)$/);
-    
-        R = rgb[1]
-        G = rgb[2]
-        B = rgb[3]
-
-        R = parseInt(R * (100 + percent) / 100);
-        G = parseInt(G * (100 + percent) / 100);
-        B = parseInt(B * (100 + percent) / 100);
-
-        R = (R<255)?R:255;  
-        G = (G<255)?G:255;  
-        B = (B<255)?B:255;  
-
-        var RR = ((R.toString(16).length==1)?"0"+R.toString(16):R.toString(16));
-        var GG = ((G.toString(16).length==1)?"0"+G.toString(16):G.toString(16));
-        var BB = ((B.toString(16).length==1)?"0"+B.toString(16):B.toString(16));
-
-        return "#"+RR+GG+BB;
-    }
+    function shadeColor(rgb, amount) {
+        const color = rgba2hex(rgb);
+        return ('#' + color.replace(/^#/, '')
+        .replace(/../g, (color) => ('0' + Math.min(255, Math.max(0, parseInt(color, 16) + amount)).toString(16)).substr(-2)));
+    }       
 
     const getColorToPaint = (e) => {
         const tool = getActiveTool();
@@ -136,6 +121,7 @@
     }
 
     const paintPixel = (e) => {
+
         const pixel = e.target;
         const pixels = getAllPixels(e);
 
@@ -155,5 +141,6 @@
     getSketchingTools().forEach(tool => tool.addEventListener("click", changeTool));
     getClearButton().addEventListener("click", clearSketchingBoard);
     getGridLinesButton().addEventListener("click", toggleGridLines);
+    getSketchingBoard().addEventListener("click", (e) => { print(e.target) });
 </script>
 </html>
